--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <div class="col-12">
                         <br>
                         <br>
-                        Hello, I’m JangGeun An.<br>
-                        Web Developer Dreamer<br>
+                        <span class="text-info">Just Do It!</span><br>
+                        개발꿈나무 안장근 입니다.<br>
                         <br>
                         <br>
                     </div>
